# Tanker3D

./: .gitignore  CMakeLists.txt  README.MD
ppgso/: image_bmp.cpp  shader.cpp  shader.h  texture.cpp  window.cpp
shader/: diffuse_frag.glsl  diffuse_vert.glsl
src/project/: main.cpp
src/project/elements/: background.cpp  background.h  bullet.cpp  bullet.h  cube.cpp  cube.h  element.cpp  element.h  rectangle.cpp  rectangle.h  tank.cpp  tank.h
src/project/utils/: bmp.h  textures.cpp  textures.h
